<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo_cd"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_logo"
        android:layout_marginTop="20dp" >

        <TextView
            android:id="@+id/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/event_name"
            android:textColor="#000000"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/event_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/event_name"
            android:layout_centerHorizontal="true"
            android:text="@string/event_date"
            android:textColor="#000000"
            android:textSize="30sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/login_sign_up_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="10dp" >

        <com.procialize.libraries.MLRoundedImageView
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="70dp"
            android:contentDescription="@string/login_button"
            android:src="@drawable/login" />

        <com.procialize.libraries.MLRoundedImageView
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="70dp"
            android:contentDescription="@string/sign_up_button"
            android:src="@drawable/sign_up" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/linkedin_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_sign_up_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/linkedIn_cd"
        android:src="@drawable/linkendin" />

    <ImageView
        android:id="@+id/fb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linkedin_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/facebook_cd"
        android:src="@drawable/facebook" />

    <RelativeLayout
        android:id="@+id/manual_login_layout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:visibility="gone" >

        <EditText
            android:id="@+id/app_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/username"
            android:singleLine="true" />

        <EditText
            android:id="@+id/app_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_username"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <com.procialize.libraries.MLRoundedImageView
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/app_password"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/submit_button"
            android:src="@drawable/login" />

        <com.procialize.libraries.MLRoundedImageView
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/app_password"
            android:layout_marginRight="80dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/cancel_button"
            android:src="@drawable/sign_up" />
    </RelativeLayout>

</RelativeLayout>