<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/single_relative_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="8dp" >

    <!-- Thumbnail Image -->

    <com.procialize.libraries.MLRoundedImageView
        android:id="@+id/thumbnail"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_launcher" />

    <!-- Name -->

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/thumbnail"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/single_list_row_full_name"
        android:textColor="@color/titlebackgroundcolor"
        android:textSize="20sp" />

    <!-- Designation -->

    <TextView
        android:id="@+id/designation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginTop="1dip"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/single_list_row_designation"
        android:textSize="13sp" />

    <!-- Company Name -->

    <TextView
        android:id="@+id/comp_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/designation"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/single_list_row_company_name"
        android:textSize="13sp" />

    <!-- City -->

    <TextView
        android:id="@+id/city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/comp_name"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/single_list_row_city_name"
        android:textSize="13sp" />

</RelativeLayout>